--- a/game.html
+++ b/game.html
@@ -7,9 +7,23 @@
     <link rel="stylesheet" href="game.css">
 </head>
 <body>
-    <h1>Welcome to the Virtual World!</h1>
+    <h1>Virtual World</h1>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
 
+    <!-- Inventory Button -->
+    <button id="inventoryButton">View Inventory</button>
+
+    <!-- Inventory Modal -->
+    <div id="inventoryModal" class="modal">
+        <div class="modal-content">
+            <span class="close" id="closeModal">&times;</span>
+            <h2>Your Inventory</h2>
+            <div id="inventoryList"></div>
+        </div>
+    </div>
+
+    <script src="auth.js"></script>
     <script src="game.js"></script>
+    <script src="inventory.js"></script> <!-- New script for handling inventory -->
 </body>
 </html>
