--- a/game.html
+++ b/game.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MMO Game - Virtual World</title>
-    <link rel="stylesheet" href="game.css">
+    <title>Town Square - Hub Area</title>
+    <link rel="stylesheet" href="townsquare.css">
 </head>
 <body>
-    <h1>Virtual World</h1>
-    <canvas id="gameCanvas" width="800" height="600"></canvas>
-
+    <h1>Town Square</h1>
+    <canvas id="townCanvas" width="1000" height="600"></canvas>
+    
     <!-- Inventory Button -->
     <button id="inventoryButton">View Inventory</button>
 
@@ -23,7 +23,7 @@
     </div>
 
     <script src="auth.js"></script>
-    <script src="game.js"></script>
-    <script src="inventory.js"></script> <!-- New script for handling inventory -->
+    <script src="inventory.js"></script>
+    <script src="townsquare.js"></script> <!-- Main script for the town square -->
 </body>
 </html>
